5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1836_1278.log
== SUBMITION (2019-06-27 11:34:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([[0,2,11,6,15,11,1]
				[2,0,7,12,4,2,15]
				[11,7,0,11,8,3,13]
				[6,12,11,0,10,2,1]
				[15,4,8,10,0,5,13]
				[11,2,3,2,5,0,14]
				[1,15,13,1,13,14,0]

c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:")
print(a)
-- EXECUTION TIME:
0.763709
-- ERROR:
  File "/home/codebench/codes/1836/1278/main.py", line 12
    c1 = int(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:34:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([[0,2,11,6,15,11,1]
				[2,0,7,12,4,2,15]
				[11,7,0,11,8,3,13]
				[6,12,11,0,10,2,1]
				[15,4,8,10,0,5,13]
				[11,2,3,2,5,0,14]
				[1,15,13,1,13,14,0]

c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:")
print(a)
-- EXECUTION TIME:
0.700126
-- ERROR:
  File "/home/codebench/codes/1836/1278/main.py", line 12
    c1 = int(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:35:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([[0,2,11,6,15,11,1]
				[2,0,7,12,4,2,15]
				[11,7,0,11,8,3,13]
				[6,12,11,0,10,2,1]
				[15,4,8,10,0,5,13]
				[11,2,3,2,5,0,14]
				[1,15,13,1,13,14,0]

c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:")
print(a)
-- ERROR:
File "XXXX", line 12
    c1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:35:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([[0,2,11,6,15,11,1]
				[2,0,7,12,4,2,15]
				[11,7,0,11,8,3,13]
				[6,12,11,0,10,2,1]
				[15,4,8,10,0,5,13]
				[11,2,3,2,5,0,14]
				[1,15,13,1,13,14,0]])

c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:")
print(a)
-- ERROR:
File "XXXX", line 20
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:36:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([[0,2,11,6,15,11,1]
				[2,0,7,12,4,2,15]
				[11,7,0,11,8,3,13]
				[6,12,11,0,10,2,1]
				[15,4,8,10,0,5,13]
				[11,2,3,2,5,0,14]
				[1,15,13,1,13,14,0]])

c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:37:03) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1]
				[2,0,7,12,4,2,15]
				[11,7,0,11,8,3,13]
				[6,12,11,0,10,2,1]
				[15,4,8,10,0,5,13]
				[11,2,3,2,5,0,14]
				[1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:37:21) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1]
[2,0,7,12,4,2,15]
[11,7,0,11,8,3,13]
[6,12,11,0,10,2,1]
[15,4,8,10,0,5,13]
[11,2,3,2,5,0,14]
[1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:38:01) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:38:13) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- EXECUTION TIME:
0.956077
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1278/main.py", line 16, in <module>
    a = a + mat[c1//111-1,c2/111-1]
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:38:16) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[c1//111-1,c2/111-1]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:38:40) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0

while(c2 != -1):
	a = a + mat[(c1//111)-1,(c2/111)-1]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:54:47) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = c1//111 - 1
y = c2//111 - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- EXECUTION TIME:
0.918884
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:54:47) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = c1//111 - 1
y = c2//111 - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:56:04) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = c1//111 - 1
y = c2//111 - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:57:57) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = (c1//111) - 1
y = (c2//111) - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:58:08) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = (c1//111) - 1
y = (c2//111) - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 13:28:59) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = (c1//111) - 1
y = (c2//111) - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- EXECUTION TIME:
1.22547
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:56:31) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = (c1//111) - 1
y = (c2//111) - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- EXECUTION TIME:
1.22061
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:57:02) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = (c1//111) - 1
y = (c2//111) - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- EXECUTION TIME:
0.731204
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:57:12) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))
a = 0
x = (c1//111) - 1
y = (c2//111) - 1
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:57:47) 
-- CODE:
from numpy import*


mat = array([[0,2,11,6,15,11,1],
            [2,0,7,12,4,2,15],
            [11,7,0,11,8,3,13],
            [6,12,11,0,10,2,1],
            [15,4,8,10,0,5,13],
            [11,2,3,2,5,0,14],
            [1,15,13,1,13,14,0]])
c1 = int(input("cidade1:"))
c2 = int(input("cidade2:"))

x = (c1//111) - 1
y = (c2//111) - 1
a = 0
while(c2 != -1):
	a = a + mat[(x,y)]
	c1 = c2
	c2 = int(input("Cidade2:"))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:07:57) 
-- CODE:
from numpy import*
c1=int(input("insira a cidade 1: "))
c2=int(input("insira a cidade 2: "))
mt=array([[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]])
if (c1==111):
	i=0
elif (c1==222):
	i=1
elif (c1==333):
	i=2
elif (c1==444):
	i=3
elif (c1==555):
	i=4
elif (c1==666):
	i=5
elif (c1==777):
	i=6
if (c2==111):
	j=0
elif (c2==222):
	j=1
elif (c2==333):
	j=2
elif (c2==444):
	j=3
elif (c2==555):
	j=4
elif (c2==666):
	j=5
elif (c2==777):
	j=6
s=(mt[i,j])
c=int(input("insira a proxima cidade: "))

while c != -1:
	if (c2==111):
		i=0
	elif (c2==222):
		i=1
	elif (c2==333):
		i=2
	elif (c2==444):
		i=3
	elif (c2==555):
		i=4
	elif (c2==666):
		i=5
	elif (c2==777):
		i=6
	if (c==111):
		j=0
	elif (c==222):
		j=1
	elif (c==333):
		j=2
	elif (c==444):
		j=3
	elif (c==555):
		j=4
	elif (c==666):
		j=5
	elif (c==777):
		j=6
	s=s+mt[i,j]
	c2=c
	c=int(input("insira a proxima cidade: "))
print(s)
-- EXECUTION TIME:
0.930599
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
